# ChangeLog for games-board/hearts
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-board/hearts/ChangeLog,v 1.2 2007/02/08 21:00:03 wolf31o2 Exp $

  08 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

*hearts-1.98 (05 Aug 2005)

  05 Aug 2005; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by Yannick Heneault #99474.