@@ -1,6 +1,9 @@
 # ChangeLog for games-board/hearts
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-board/hearts/ChangeLog,v 1.2 2007/02/08 21:00:03 wolf31o2 Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-board/hearts/ChangeLog,v 1.3 2009/01/05 01:17:34 mr_bones_ Exp $
+
+  05 Jan 2009; Michael Sterrett <mr_bones_@gentoo.org> hearts-1.98.ebuild:
+  make PATCHES an array
 
   08 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org> ChangeLog:
   Regenerate digest in Manifest2 format.
